--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,16 @@
 {
     "ServerKind": 0,
-    "OrganizationName": "⌈xjzx⌋ LC"
+    "OrganizationName": "⌈xjzx⌋ LC",
+    "ClassPlanSource": {
+        "Value": "https://raw.bgithub.xyz/LCAleksei/classisland-mgmt-cfg/master/classplans.json",
+        "Version": 1
+    },
+    "TimeLayoutSource": {
+        "Value": "https://raw.bgithub.xyz/LCAleksei/classisland-mgmt-cfg/master/timelayouts.json",
+        "Version": 1
+    },
+    "SubjectsSource": {
+        "Value": "https://raw.bgithub.xyz/LCAleksei/classisland-mgmt-cfg/master/subjects.json",
+        "Version": 1
+    }
 }
