--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "ServerKind": 0,
     "OrganizationName": "⌈xjzx⌋ LC",
     "ClassPlanSource": {
-        "Value": "https://raw.bgithub.xyz/LCAleksei/classisland-mgmt-cfg/master/classplans.json",
-        "Version": 1
+        "Value": "https://raw.bgithub.xyz/LCAleksei/classisland-mgmt-cfg/master/{id}/classplans.json",
+        "Version": 2
     },
     "TimeLayoutSource": {
         "Value": "https://raw.bgithub.xyz/LCAleksei/classisland-mgmt-cfg/master/timelayouts.json",
