--- a/manifest.json
+++ b/manifest.json
@@ -6,15 +6,15 @@
         "Version": 2
     },
     "TimeLayoutSource": {
-        "Value": "https://raw.bgithub.xyz/LCAleksei/classisland-mgmt-cfg/master/timelayouts.json",
-        "Version": 1
+        "Value": "https://raw.bgithub.xyz/LCAleksei/classisland-mgmt-cfg/master/{id}/timelayouts.json",
+        "Version": 2
     },
     "SubjectsSource": {
-        "Value": "https://raw.bgithub.xyz/LCAleksei/classisland-mgmt-cfg/master/subjects.json",
-        "Version": 1
+        "Value": "https://raw.bgithub.xyz/LCAleksei/classisland-mgmt-cfg/master/{id}/subjects.json",
+        "Version": 2
     },
     "PolicySource": {
-        "Value": "https://raw.bgithub.xyz/LCAleksei/classisland-mgmt-cfg/master/policy.json",
-        "Version": 1
+        "Value": "https://raw.bgithub.xyz/LCAleksei/classisland-mgmt-cfg/master/{id}/policy.json",
+        "Version": 2
     }
 }
